--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -5,7 +5,7 @@
     "LabelSwagger": "Swagger",
     "LabelStandard": "Standard",
     "LabelApiDocumentation": "Api Dokumentation",
-    "LabelDeveloperResources": "Entwickler Resources",
+    "LabelDeveloperResources": "Entwickler Ressourcen",
     "LabelBrowseLibrary": "Bibliothek durchsuchen",
     "LabelConfigureMediaBrowser": "Konfiguriere Media Browser",
     "LabelOpenLibraryViewer": "\u00d6ffne Bibliothekenansicht",
