--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -56,7 +56,7 @@
     "HeaderVideo": "V\u00eddeo",
     "HeaderPaths": "Caminhos",
     "CategorySync": "Sincroniza\u00e7\u00e3o",
-    "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderEasyPinCode": "C\u00f3digo de Pin Facil",
     "RegisterWithPayPal": "Registrar com PayPal",
     "HeaderSyncRequiresSupporterMembership": "Sincroniza\u00e7\u00e3o Necessita de uma Filia\u00e7\u00e3o de Colaborador",
     "HeaderEnjoyDayTrial": "Aproveite um per\u00edodo de 14 dias gr\u00e1tis para testes",
@@ -1120,14 +1120,14 @@
     "LabelDisplayFoldersView": "Exibir visualiza\u00e7\u00e3o de pastas para mostrar pastas simples de m\u00eddia",
     "ViewTypeLiveTvRecordingGroups": "Grava\u00e7\u00f5es",
     "ViewTypeLiveTvChannels": "Canais",
-    "LabelEasyPinCode": "Easy pin code:",
-    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
-    "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "LabelEasyPinCode": "C\u00f3digo de pin f\u00e1cil:",
+    "EasyPasswordHelp": "Seu c\u00f3digo de pin f\u00e1cil \u00e9 usado para acesso off-line com apps suportadas pelo Media Browser e pode ser usado para acesso f\u00e1cil dentro da rede.",
+    "LabelInNetworkSignInWithEasyPassword": "Ativar acesso dentro da rede com meu c\u00f3digo de pin f\u00e1cil",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "Se ativado, voc\u00ea poder\u00e1 usar seu c\u00f3digo de pin f\u00e1cil para acessar o Media Browser dentro de sua rede dom\u00e9stica. Sua senha padr\u00e3o s\u00f3 ser\u00e1 usada fora da rede dom\u00e9stica. Se o c\u00f3digo de pin f\u00e1cil estiver em branco, voc\u00ea n\u00e3o precisar\u00e1 de senha dentro de sua rede dom\u00e9stica.",
     "HeaderPassword": "Senha",
     "HeaderLocalAccess": "Acesso Local",
     "HeaderViewOrder": "Ordem da Visualiza\u00e7\u00e3o",
-    "ButtonResetEasyPassword": "Reset easy pin code",
+    "ButtonResetEasyPassword": "Redefinir c\u00f3digo de pin f\u00e1cil",
     "LabelSelectUserViewOrder": "Escolha a ordem em que suas visualiza\u00e7\u00f5es ser\u00e3o exibidas dentro das apps do Media Browser",
     "LabelMetadataRefreshMode": "Modo de atualiza\u00e7\u00e3o dos metadados:",
     "LabelImageRefreshMode": "Modo de atualiza\u00e7\u00e3o das imagens:",
