--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -14,7 +14,7 @@
     "FileReadError": "Un erreur est survenue pendant la lecture du fichier.",
     "DeleteUser": "Supprimer l'utilisateur",
     "DeleteUserConfirmation": "\u00cates-vous s\u00fbr de vouloir supprimer cet utilisateur?",
-    "PasswordResetHeader": "R\u00e9initialisation du mot de passe",
+    "PasswordResetHeader": "R\u00e9initialiser le mot de passe",
     "PasswordResetComplete": "Le mot de passe a \u00e9t\u00e9 r\u00e9initialis\u00e9.",
     "PinCodeResetComplete": "Le code Easy Pin a \u00e9t\u00e9 r\u00e9initialis\u00e9.",
     "PasswordResetConfirmation": "\u00cates-vous s\u00fbr de vouloir r\u00e9initialiser le mot de passe?",
