--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -14,7 +14,7 @@
     "FileReadError": "Feil oppstod i det filen ble lest",
     "DeleteUser": "Slett bruker",
     "DeleteUserConfirmation": "Er du sikker p\u00e5 at du vil slette denne brukeren?",
-    "PasswordResetHeader": "Resett passord",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "Passordet har blitt resatt",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Er du sikker p\u00e5 at du vil resette passordet?",
