--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -16,10 +16,10 @@
     "DeleteUserConfirmation": "Deseja realmente excluir este usu\u00e1rio?",
     "PasswordResetHeader": "Redefinir Senha",
     "PasswordResetComplete": "A senha foi redefinida.",
-    "PinCodeResetComplete": "The pin code has been reset.",
+    "PinCodeResetComplete": "O c\u00f3digo pin foi redefinido.",
     "PasswordResetConfirmation": "Deseja realmente redefinir a senha?",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PinCodeResetConfirmation": "Deseja realmente redefinir o c\u00f3digo pin?",
+    "HeaderPinCodeReset": "Redefinir C\u00f3digo Pin",
     "PasswordSaved": "Senha salva.",
     "PasswordMatchError": "A senha e a confirma\u00e7\u00e3o da senha devem ser iguais.",
     "OptionRelease": "Lan\u00e7amento Oficial",
