--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -6,8 +6,8 @@
     "Administrator": "\u7ba1\u7406\u5458",
     "Password": "\u5bc6\u7801",
     "DeleteImage": "\u5220\u9664\u56fe\u50cf",
-    "MessageThankYouForSupporting": "Thank you for supporting Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Please support Media Browser.",
+    "MessageThankYouForSupporting": "\u611f\u8c22\u60a8\u7684\u652f\u6301 Media Browser.",
+    "MessagePleaseSupportMediaBrowser": "\u8bf7\u652f\u6301 Media Browser.",
     "DeleteImageConfirmation": "\u4f60\u786e\u5b9a\u8981\u5220\u9664\u6b64\u56fe\u50cf\uff1f",
     "FileReadCancelled": "\u6587\u4ef6\u8bfb\u53d6\u5df2\u88ab\u53d6\u6d88\u3002",
     "FileNotFound": "\u672a\u627e\u5230\u6587\u4ef6\u3002",
@@ -16,10 +16,10 @@
     "DeleteUserConfirmation": "\u4f60\u786e\u5b9a\u8981\u5220\u9664\u6b64\u7528\u6237\uff1f",
     "PasswordResetHeader": "\u5bc6\u7801\u91cd\u7f6e",
     "PasswordResetComplete": "\u5bc6\u7801\u5df2\u91cd\u7f6e",
-    "PinCodeResetComplete": "The pin code has been reset.",
+    "PinCodeResetComplete": "PIN\u7801\u5df2\u88ab\u200b\u200b\u91cd\u7f6e\u3002",
     "PasswordResetConfirmation": "\u4f60\u786e\u5b9a\u8981\u91cd\u7f6e\u5bc6\u7801\uff1f",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PinCodeResetConfirmation": "\u4f60\u786e\u5b9a\u8981\u91cd\u7f6ePIN\u7801\uff1f",
+    "HeaderPinCodeReset": "\u91cd\u7f6ePIN\u7801",
     "PasswordSaved": "\u5bc6\u7801\u5df2\u4fdd\u5b58\u3002",
     "PasswordMatchError": "\u5bc6\u7801\u548c\u786e\u8ba4\u5bc6\u7801\u5fc5\u987b\u5339\u914d\u3002",
     "OptionRelease": "\u5b98\u65b9\u6b63\u5f0f\u7248",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "\u8c22\u8c22\u3002\u4f60\u7684\u652f\u6301\u8005\u5e8f\u53f7\u5df2\u79fb\u9664\u3002",
     "ErrorLaunchingChromecast": "\u542f\u52a8chromecast\u9047\u5230\u9519\u8bef\uff0c\u8bf7\u786e\u8ba4\u8bbe\u5907\u5df2\u7ecf\u8fde\u63a5\u5230\u4f60\u7684\u65e0\u7ebf\u7f51\u7edc\u3002",
     "HeaderSearch": "\u641c\u7d22",
-    "ValueDateCreated": "Date created: {0}",
+    "ValueDateCreated": "\u521b\u5efa\u65e5\u671f\uff1a {0}",
     "LabelArtist": "\u827a\u672f\u5bb6",
     "LabelMovie": "\u7535\u5f71",
     "LabelMusicVideo": "\u97f3\u4e50\u89c6\u9891",
@@ -48,32 +48,32 @@
     "LabelFailed": "(\u5931\u8d25)",
     "ButtonHelp": "Help",
     "ButtonSave": "\u50a8\u5b58",
-    "LabelCollection": "Collection",
+    "LabelCollection": "\u5408\u96c6",
     "HeaderAddToCollection": "\u52a0\u5165\u5408\u96c6",
     "NewCollectionNameExample": "\u4f8b\u5982\uff1a\u661f\u7403\u5927\u6218\u5408\u96c6",
     "OptionSearchForInternetMetadata": "\u5728\u4e92\u8054\u7f51\u4e0a\u641c\u7d22\u5a92\u4f53\u56fe\u50cf\u548c\u8d44\u6599",
     "LabelSelectCollection": "\u9009\u62e9\u5408\u96c6\uff1a",
-    "HeaderDevices": "Devices",
-    "ButtonScheduledTasks": "Scheduled tasks",
-    "MessageItemsAdded": "Items added",
-    "ButtonAddToCollection": "Add to collection",
+    "HeaderDevices": "\u8bbe\u5907",
+    "ButtonScheduledTasks": "\u8ba1\u5212\u4efb\u52a1",
+    "MessageItemsAdded": "\u9879\u76ee\u5df2\u6dfb\u52a0",
+    "ButtonAddToCollection": "\u6dfb\u52a0\u5230\u6536\u85cf",
     "HeaderSelectCertificatePath": "Select Certificate Path",
-    "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to premium plugins, internet channel content, and more. {0}Learn more{1}.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Welcome to the Media Browser Dashboard",
+    "ConfirmMessageScheduledTaskButton": "\u6b64\u64cd\u4f5c\u901a\u5e38\u662f\u901a\u8fc7\u8ba1\u5212\u4efb\u52a1\u81ea\u52a8\u8fd0\u884c\u3002\u5b83\u4e5f\u53ef\u624b\u52a8\u8fd0\u884c\u3002\u8981\u914d\u7f6e\u8ba1\u5212\u4efb\u52a1\uff0c\u8bf7\u53c2\u9605\uff1a",
+    "HeaderSupporterBenefit": "\u652f\u6301\u8005\u4f1a\u5458\u4f1a\u5f97\u5230\u989d\u5916\u7684\u597d\u5904\uff0c\u5982\u83b7\u5f97\u9ad8\u7ea7\u63d2\u4ef6\uff0c\u4e92\u8054\u7f51\u9891\u9053\u5185\u5bb9\uff0c\u7b49\u7b49\u3002{0}\u4e86\u89e3\u8be6\u60c5{1} \u3002",
+    "HeaderWelcomeToMediaBrowserServerDashboard": "\u6b22\u8fce\u6765\u5230Media Browser\u63a7\u5236\u53f0",
     "HeaderWelcomeToMediaBrowserWebClient": "\u6b22\u8fce\u8fdb\u5165Media Browser Web\u5ba2\u6237\u7aef",
-    "ButtonTakeTheTour": "Take the tour",
-    "HeaderWelcomeBack": "Welcome back!",
-    "ButtonTakeTheTourToSeeWhatsNew": "Take the tour to see what's new",
-    "MessageNoSyncJobsFound": "No sync jobs found. Create sync jobs using the Sync buttons found throughout the web interface.",
+    "ButtonTakeTheTour": "\u8fdb\u884c\u53c2\u89c2",
+    "HeaderWelcomeBack": "\u6b22\u8fce\u56de\u6765\uff01",
+    "ButtonTakeTheTourToSeeWhatsNew": "\u8fdb\u884c\u53c2\u89c2\uff0c\u770b\u770b\u6709\u4ec0\u4e48\u65b0\u4e1c\u897f",
+    "MessageNoSyncJobsFound": "\u6ca1\u6709\u53d1\u73b0\u540c\u6b65\u4f5c\u4e1a\u3002\u4f7f\u7528Web\u754c\u9762\u4e2d\u7684\u540c\u6b65\u6309\u94ae\u6765\u521b\u5efa\u540c\u6b65\u4f5c\u4e1a\u3002",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
-    "HeaderDeviceAccess": "Device Access",
-    "HeaderSelectDevices": "Select Devices",
-    "ButtonCancelItem": "Cancel item",
-    "ButtonQueueForRetry": "Queue for retry",
-    "ButtonReenable": "Re-enable",
-    "SyncJobItemStatusSyncedMarkForRemoval": "Marked for removal",
+    "HeaderDeviceAccess": "\u8bbe\u5907\u8bbf\u95ee",
+    "HeaderSelectDevices": "\u9009\u62e9\u8bbe\u5907",
+    "ButtonCancelItem": "\u53d6\u6d88\u9879\u76ee",
+    "ButtonQueueForRetry": "\u91cd\u8bd5\u961f\u5217",
+    "ButtonReenable": "\u91cd\u65b0\u542f\u7528",
+    "SyncJobItemStatusSyncedMarkForRemoval": "\u6807\u8bb0\u4e3a\u5220\u9664",
     "LabelAbortedByServerShutdown": "(\u56e0\u4e3a\u670d\u52a1\u5668\u5173\u95ed\u88ab\u4e2d\u6b62)",
     "LabelScheduledTaskLastRan": "\u6700\u540e\u8fd0\u884c {0}, \u82b1\u8d39\u65f6\u95f4 {1}.",
     "HeaderDeleteTaskTrigger": "\u5220\u9664\u4efb\u52a1\u89e6\u53d1\u6761\u4ef6",
@@ -85,13 +85,13 @@
     "LabelFree": "\u514d\u8d39",
     "HeaderSelectAudio": "\u9009\u62e9\u97f3\u9891",
     "HeaderSelectSubtitles": "\u9009\u62e9\u5b57\u5e55",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "\u4ece\u8bbe\u5907\u4e2d\u6807\u8bb0\u5220\u9664",
+    "ButtonUnmarkForRemoval": "\u4ece\u8bbe\u5907\u4e2d\u53d6\u6d88\u6807\u8bb0\u5220\u9664",
     "LabelDefaultStream": "(\u9ed8\u8ba4)",
     "LabelForcedStream": "(\u5f3a\u5236)",
     "LabelDefaultForcedStream": "(\u9ed8\u8ba4\/\u5f3a\u5236)",
     "LabelUnknownLanguage": "\u672a\u77e5\u8bed\u8a00",
-    "MessageConfirmSyncJobItemCancellation": "Are you sure you wish to cancel this item?",
+    "MessageConfirmSyncJobItemCancellation": "\u4f60\u786e\u5b9a\u8981\u53d6\u6d88\u8fd9\u4e2a\u9879\u76ee\uff1f",
     "ButtonMute": "\u9759\u97f3",
     "ButtonUnmute": "\u53d6\u6d88\u9759\u97f3",
     "ButtonStop": "\u505c\u6b62",
@@ -112,10 +112,10 @@
     "ButtonClose": "\u5173\u95ed",
     "LabelAllPlaysSentToPlayer": "\u6240\u6709\u64ad\u653e\u5185\u5bb9\u90fd\u5c06\u88ab\u53d1\u9001\u5230\u6240\u9009\u62e9\u7684\u64ad\u653e\u5668\u3002",
     "MessageInvalidUser": "\u7528\u6237\u540d\u6216\u5bc6\u7801\u4e0d\u53ef\u7528\u3002\u8bf7\u91cd\u8bd5\u3002",
-    "HeaderLoginFailure": "Login Failure",
+    "HeaderLoginFailure": "\u767b\u5f55\u5931\u8d25",
     "HeaderAllRecordings": "\u6240\u6709\u5f55\u5236\u7684\u8282\u76ee",
     "RecommendationBecauseYouLike": "\u56e0\u4e3a\u4f60\u559c\u6b22 {0}",
-    "RecommendationBecauseYouWatched": "\u4f60\u4e3a\u4f60\u770b\u8fc7 {0}",
+    "RecommendationBecauseYouWatched": "\u56e0\u4e3a\u4f60\u770b\u8fc7 {0}",
     "RecommendationDirectedBy": "\u5bfc\u6f14 {0}",
     "RecommendationStarring": "\u4e3b\u6f14 {0}",
     "HeaderConfirmRecordingCancellation": "\u786e\u8ba4\u53d6\u6d88\u5f55\u5236",
@@ -215,10 +215,10 @@
     "LabelPlayMethodDirectPlay": "\u76f4\u63a5\u64ad\u653e",
     "LabelAudioCodec": "\u97f3\u9891\uff1a {0}",
     "LabelVideoCodec": "\u89c6\u9891\uff1a{0}",
-    "LabelLocalAccessUrl": "Local access: {0}",
+    "LabelLocalAccessUrl": "\u672c\u5730\u8bbf\u95ee\uff1a {0}",
     "LabelRemoteAccessUrl": "\u8fdc\u7a0b\u8bbf\u95ee\uff1a{0}",
-    "LabelRunningOnPort": "Running on http port {0}.",
-    "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
+    "LabelRunningOnPort": "\u6b63\u8fd0\u884c\u4e8eHTTP\u7aef\u53e3 {0}.",
+    "LabelRunningOnPorts": "\u6b63\u8fd0\u884c\u4e8eHTTP\u7aef\u53e3 {0}\uff0c\u548c https\u7aef\u53e3{1}.",
     "HeaderLatestFromChannel": "\u6700\u65b0\u7684 {0}",
     "ButtonDownload": "\u4e0b\u8f7d",
     "LabelUnknownLanaguage": "\u672a\u77e5\u8bed\u8a00",
@@ -465,7 +465,7 @@
     "FolderTypeHomeVideos": "\u5bb6\u5ead\u89c6\u9891",
     "FolderTypeGames": "\u6e38\u620f",
     "FolderTypeBooks": "\u4e66\u7c4d",
-    "FolderTypeTvShows": "TV",
+    "FolderTypeTvShows": "\u7535\u89c6",
     "TabMovies": "\u7535\u5f71",
     "TabSeries": "\u7535\u89c6\u5267",
     "TabEpisodes": "\u5267\u96c6",
@@ -577,7 +577,7 @@
     "HeaderItems": "\u9879\u76ee",
     "HeaderOtherItems": "\u5176\u4ed6\u9879\u76ee",
     "ButtonFullReview": "\u5168\u9762\u56de\u987e",
-    "ValueAsRole": "\u5982\u540c {0}",
+    "ValueAsRole": "\u626e\u6f14 {0}",
     "ValueGuestStar": "\u7279\u9080\u660e\u661f",
     "MediaInfoSize": "Size",
     "MediaInfoPath": "Path",
@@ -644,7 +644,7 @@
     "DashboardTourScheduledTasks": "Easily manage long running operations with scheduled tasks. Decide when they run, and how often.",
     "DashboardTourMobile": "The Media Browser dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "MessageRefreshQueued": "Refresh queued",
-    "TabDevices": "Devices",
+    "TabDevices": "\u8bbe\u5907",
     "TabExtras": "Extras",
     "DeviceLastUsedByUserName": "Last used by {0}",
     "HeaderDeleteDevice": "Delete Device",
@@ -666,7 +666,7 @@
     "DefaultErrorMessage": "There was an error processing the request. Please try again later.",
     "ButtonAccept": "Accept",
     "ButtonReject": "Reject",
-    "HeaderForgotPassword": "Forgot Password",
+    "HeaderForgotPassword": "\u5fd8\u8bb0\u5bc6\u7801",
     "MessageContactAdminToResetPassword": "Please contact your system administrator to reset your password.",
     "MessageForgotPasswordInNetworkRequired": "Please try again within your home network to initiate the password reset process.",
     "MessageForgotPasswordFileCreated": "The following file has been created on your server and contains instructions on how to proceed:",
